Reworked the way grid is created to prevent cells overlaping container

--- a/style.css
+++ b/style.css
@@ -15,8 +15,17 @@
 
 .grid-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   width: 720px;
   height: 720px;
   border: 1px solid grey;
+}
+
+.grid-line {
+  display: flex;
+  flex: 1;
+}
+
+.grid-cell {
+  flex: 1;
 }
